--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "proteinMPNN"]
-	path = proteinMPNN
+[submodule "ProteinMPNN"]
+	path = ProteinMPNN
 	url = https://github.com/dauparas/ProteinMPNN.git
