--- a/environment.yml
+++ b/environment.yml
@@ -2,322 +2,25 @@ name: upside2
 channels:
   - pytorch
   - conda-forge
+  - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - asttokens=2.4.1=pyhd8ed1ab_0
-  - astunparse=1.6.3=pyhd8ed1ab_0
-  - binutils=2.40=hdd6e379_0
-  - binutils_impl_linux-64=2.40=hf600244_0
-  - binutils_linux-64=2.40=hdade7a5_3
-  - biopython=1.83=py310h2372a71_0
-  - blosc=1.21.5=hc2324a3_1
-  - brotli=1.1.0=hd590300_1
-  - brotli-bin=1.1.0=hd590300_1
-  - brotli-python=1.1.0=py310hc6cd4ac_1
-  - bzip2=1.0.8=hd590300_5
-  - c-ares=1.28.1=hd590300_0
-  - c-blosc2=2.14.4=hb4ffafa_1
-  - c-compiler=1.7.0=hd590300_0
-  - ca-certificates=2024.2.2=hbcca054_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - certifi=2024.2.2=pyhd8ed1ab_0
-  - cftime=1.6.3=py310h1f7b6fc_0
-  - charset-normalizer=3.3.2=pyhd8ed1ab_0
-  - cmake=3.5.0=3
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - comm=0.2.2=pyhd8ed1ab_0
-  - contourpy=1.2.1=py310hd41b1e2_0
-  - cudatoolkit=11.3.1=hb98b00a_13
-  - cxx-compiler=1.7.0=h00ab1b0_0
-  - cycler=0.12.1=pyhd8ed1ab_0
-  - debugpy=1.8.1=py310hc6cd4ac_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - eigen=3.4.0=h00ab1b0_0
-  - exceptiongroup=1.2.0=pyhd8ed1ab_2
-  - executing=2.0.1=pyhd8ed1ab_0
-  - fasteners=0.17.3=pyhd8ed1ab_0
-  - ffmpeg=4.3=hf484d3e_0
-  - filelock=3.13.4=pyhd8ed1ab_0
-  - fonttools=4.51.0=py310h2372a71_0
-  - freetype=2.12.1=h267a509_2
-  - fsspec=2024.3.1=pyhca7485f_0
-  - gcc=12.3.0=h95e488c_3
-  - gcc_impl_linux-64=12.3.0=he2b93b0_5
-  - gcc_linux-64=12.3.0=h6477408_3
-  - gmp=6.3.0=h59595ed_1
-  - gmpy2=2.1.2=py310h3ec546c_1
-  - gnutls=3.6.13=h85f3911_1
-  - griddataformats=1.0.2=pyhd8ed1ab_0
-  - gsd=3.2.1=py310h1f7b6fc_0
-  - gxx=12.3.0=h95e488c_3
-  - gxx_impl_linux-64=12.3.0=he2b93b0_5
-  - gxx_linux-64=12.3.0=h4a1b8e8_3
-  - h5py=3.11.0=nompi_py310h65828d5_100
-  - hdf4=4.2.15=h2a13503_7
-  - hdf5=1.14.3=nompi_h4f84152_100
-  - icu=73.2=h59595ed_0
-  - idna=3.7=pyhd8ed1ab_0
-  - impi_rt=2021.12.0=ha770c72_535
-  - importlib-metadata=7.1.0=pyha770c72_0
-  - importlib_metadata=7.1.0=hd8ed1ab_0
-  - ipykernel=6.29.3=pyhd33586a_0
-  - ipython=8.22.2=pyh707e725_0
-  - jax=0.4.26=pyhd8ed1ab_0
-  - jedi=0.19.1=pyhd8ed1ab_0
-  - jinja2=3.1.3=pyhd8ed1ab_0
-  - joblib=1.4.0=pyhd8ed1ab_0
-  - jupyter_client=8.6.1=pyhd8ed1ab_0
-  - jupyter_core=5.7.2=py310hff52083_0
-  - kernel-headers_linux-64=2.6.32=he073ed8_17
-  - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.5=py310hd41b1e2_1
-  - krb5=1.21.2=h659d440_0
-  - lame=3.100=h166bdaf_1003
-  - lcms2=2.16=hb7c19ff_0
-  - ld_impl_linux-64=2.40=h41732ed_0
-  - lerc=4.0.0=h27087fc_0
-  - libabseil=20230802.1=cxx17_h59595ed_0
-  - libaec=1.1.3=h59595ed_0
-  - libblas=3.9.0=22_linux64_openblas
-  - libbrotlicommon=1.1.0=hd590300_1
-  - libbrotlidec=1.1.0=hd590300_1
-  - libbrotlienc=1.1.0=hd590300_1
-  - libcblas=3.9.0=22_linux64_openblas
-  - libcurl=8.7.1=hca28451_0
-  - libdeflate=1.20=hd590300_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=hd590300_2
-  - libexpat=2.6.2=h59595ed_0
-  - libffi=3.4.2=h7f98852_5
-  - libgcc-devel_linux-64=12.3.0=h8bca6fd_105
-  - libgcc-ng=13.2.0=h807b86a_5
-  - libgfortran-ng=13.2.0=h69a702a_5
-  - libgfortran5=13.2.0=ha4646dd_5
-  - libgomp=13.2.0=h807b86a_5
-  - libgrpc=1.60.1=h74775cd_0
-  - libiconv=1.17=hd590300_2
-  - libjpeg-turbo=3.0.0=hd590300_1
-  - liblapack=3.9.0=22_linux64_openblas
-  - libllvm14=14.0.6=hcd5def8_4
-  - libnetcdf=4.9.2=nompi_h9612171_113
-  - libnghttp2=1.58.0=h47da74e_1
-  - libnsl=2.0.1=hd590300_0
-  - libopenblas=0.3.27=pthreads_h413a1c8_0
-  - libpng=1.6.43=h2797004_0
-  - libprotobuf=4.25.1=hf27288f_2
-  - libre2-11=2023.09.01=h7a70373_1
-  - libsanitizer=12.3.0=h0f45ef3_5
-  - libsodium=1.0.18=h36c2ea0_1
-  - libsqlite=3.45.2=h2797004_0
-  - libssh2=1.11.0=h0841786_0
-  - libstdcxx-devel_linux-64=12.3.0=h8bca6fd_105
-  - libstdcxx-ng=13.2.0=h7e041cc_5
-  - libtiff=4.6.0=h1dd3fc0_3
-  - libtorch=2.1.2=cpu_generic_ha017de0_3
-  - libuuid=2.38.1=h0b41bf4_0
-  - libuv=1.48.0=hd590300_0
-  - libwebp-base=1.4.0=hd590300_0
-  - libxcb=1.15=h0b41bf4_0
-  - libxcrypt=4.4.36=hd590300_1
-  - libxml2=2.12.6=h232c23b_2
-  - libzip=1.10.1=h2629f0a_3
-  - libzlib=1.2.13=hd590300_5
-  - llvmlite=0.42.0=py310h1b8f574_1
-  - lz4-c=1.9.4=hcb278e6_0
-  - lzo=2.10=h516909a_1000
-  - markupsafe=2.1.5=py310h2372a71_0
-  - matplotlib-base=3.8.4=py310h62c0568_0
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
-  - mda-xdrlib=0.2.0=pyhd8ed1ab_0
-  - mdanalysis=2.7.0=py310hcc13569_1
-  - mdtraj=1.9.9=py310h523e8d7_1
-  - ml_dtypes=0.4.0=py310hcc13569_0
-  - mmtf-python=1.1.3=pyhd8ed1ab_0
-  - mpc=1.3.1=hfe3b2da_0
-  - mpfr=4.2.1=h9458935_1
-  - mpi=1.0=impi
-  - mpi4py=3.1.6=py310h45b48a2_0
-  - mpiplus=v0.0.2=pyhd8ed1ab_0
-  - mpmath=1.3.0=pyhd8ed1ab_0
-  - mrcfile=1.5.0=pyhd8ed1ab_0
-  - msgpack-python=1.0.7=py310hd41b1e2_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - ncurses=6.4.20240210=h59595ed_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - netcdf4=1.6.5=nompi_py310hba70d50_100
-  - nettle=3.6=he412f7d_0
-  - networkx=3.3=pyhd8ed1ab_1
-  - nomkl=1.0=h5ca1d4c_0
-  - nose=1.3.7=py_1006
-  - numba=0.59.1=py310h7dc5dd1_0
-  - numexpr=2.9.0=py310hc2d3c2e_100
-  - numpy=1.26.4=py310hb13e2d6_0
-  - ocl-icd=2.3.2=hd590300_1
-  - ocl-icd-system=1.0.0=1
-  - openh264=2.1.1=h780b84a_0
-  - openjpeg=2.5.2=h488ebb8_0
-  - openmm=8.1.1=py310h358ce72_1
-  - openmmtools=0.23.1=pyhd8ed1ab_0
-  - openssl=3.3.0=hd590300_0
-  - opt-einsum=3.3.0=hd8ed1ab_2
-  - opt_einsum=3.3.0=pyhc1e730c_2
-  - packaging=24.0=pyhd8ed1ab_0
-  - pandas=2.2.2=py310hcc13569_0
-  - parso=0.8.4=pyhd8ed1ab_0
-  - patsy=0.5.6=pyhd8ed1ab_0
-  - pdbfixer=1.9=pyh1a96a4e_0
-  - pexpect=4.9.0=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - pillow=10.3.0=py310hf73ecf8_0
-  - pip=24.0=pyhd8ed1ab_0
-  - platformdirs=4.2.0=pyhd8ed1ab_0
-  - prody=2.4.0=py310heca2aa9_0
-  - prompt-toolkit=3.0.42=pyha770c72_0
-  - psutil=5.9.8=py310h2372a71_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - py-cpuinfo=9.0.0=pyhd8ed1ab_0
-  - pyedr=0.8.0=pyhd8ed1ab_0
-  - pygments=2.17.2=pyhd8ed1ab_0
-  - pymbar=4.0.3=hff52083_1
-  - pymbar-core=4.0.3=py310h1f7b6fc_1
-  - pyparsing=3.1.2=pyhd8ed1ab_0
-  - pysocks=1.7.1=pyha2e5f31_6
-  - pytables=3.9.2=py310hd76cd5d_2
-  - python=3.10.14=hd12c33a_0_cpython
-  - python-dateutil=2.9.0=pyhd8ed1ab_0
-  - python-tzdata=2024.1=pyhd8ed1ab_0
-  - python_abi=3.10=4_cp310
-  - pytng=0.3.1=py310h7d11597_1
-  - pytorch=2.1.2=cpu_generic_py310h5d8fa8e_3
-  - pytorch-mutex=1.0=cpu
-  - pytz=2024.1=pyhd8ed1ab_0
-  - pyyaml=6.0.1=py310h2372a71_1
-  - pyzmq=26.0.0=py310h795f18f_0
-  - re2=2023.09.01=h7f4b329_1
-  - readline=8.2=h8228510_1
-  - requests=2.31.0=pyhd8ed1ab_0
-  - rhash=1.4.4=hd590300_0
-  - scikit-learn=1.4.2=py310h1fdf081_0
-  - scipy=1.13.0=py310hb13e2d6_0
-  - seaborn=0.13.2=hd8ed1ab_2
-  - seaborn-base=0.13.2=pyhd8ed1ab_2
-  - setuptools=69.5.1=pyhd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sleef=3.5.1=h9b69904_2
-  - snappy=1.2.0=hdb0a2a9_1
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - statsmodels=0.14.1=py310h1f7b6fc_0
-  - sympy=1.12=pypyh9d50eac_103
-  - sysroot_linux-64=2.12=he073ed8_17
-  - threadpoolctl=3.5.0=pyhc1e730c_0
-  - tidynamics=1.1.2=pyhd8ed1ab_0
-  - tk=8.6.13=noxft_h4845f30_101
-  - torchaudio=2.1.2=py310_cpu
-  - torchvision=0.16.2=py310_cpu
-  - tornado=6.4=py310h2372a71_0
-  - tqdm=4.66.2=pyhd8ed1ab_0
-  - traitlets=5.14.2=pyhd8ed1ab_0
-  - typing_extensions=4.11.0=pyha770c72_0
-  - tzdata=2024a=h0c530f3_0
-  - unicodedata2=15.1.0=py310h2372a71_0
-  - urllib3=2.2.1=pyhd8ed1ab_0
-  - wcwidth=0.2.13=pyhd8ed1ab_0
-  - wheel=0.43.0=pyhd8ed1ab_1
-  - xorg-libxau=1.0.11=hd590300_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xz=5.2.6=h166bdaf_0
-  - yaml=0.2.5=h7f98852_2
-  - zeromq=4.3.5=h59595ed_1
-  - zipp=3.17.0=pyhd8ed1ab_0
-  - zlib=1.2.13=hd590300_5
-  - zlib-ng=2.0.7=h0b41bf4_0
-  - zstd=1.5.5=hfc55251_0
+  - python=3.10
+  - numpy
+  - scipy
+  - pandas
+  - matplotlib
+  - seaborn
+  - scikit-learn
+  - h5py
+  - mdanalysis
+  - mdtraj
+  - biopython
+  - openmm
+  - openmmtools
+  - pymbar
+  - ipykernel
+  - pip
   - pip:
-      - anyio==4.8.0
-      - argon2-cffi==23.1.0
-      - argon2-cffi-bindings==21.2.0
-      - arrow==1.3.0
-      - async-lru==2.0.4
-      - attrs==24.2.0
-      - babel==2.16.0
-      - beautifulsoup4==4.12.3
-      - bleach==6.2.0
-      - cffi==1.17.1
-      - defusedxml==0.7.1
-      - fastjsonschema==2.20.0
-      - fqdn==1.5.1
-      - h11==0.14.0
-      - httpcore==1.0.7
-      - httpx==0.28.1
-      - icecream==2.1.3
-      - imageio==2.34.0
-      - ipywidgets==8.1.5
-      - isoduration==20.11.0
-      - jaxlib==0.4.26+cuda12.cudnn89
-      - json5==0.10.0
-      - jsonpointer==3.0.0
-      - jsonschema==4.23.0
-      - jsonschema-specifications==2024.10.1
-      - jupyter-events==0.11.0
-      - jupyter-lsp==2.2.5
-      - jupyter-server==2.15.0
-      - jupyter-server-terminals==0.5.3
-      - jupyterlab==4.3.4
-      - jupyterlab-pygments==0.3.0
-      - jupyterlab-server==2.27.3
-      - jupyterlab-widgets==3.0.13
-      - mistune==3.1.0
-      - nbclient==0.10.2
-      - nbconvert==7.16.5
-      - nbformat==5.10.4
-      - nglview==3.1.4
-      - notebook==7.3.2
-      - notebook-shim==0.2.4
-      - nvidia-cublas-cu12==12.4.5.8
-      - nvidia-cuda-cupti-cu12==12.4.127
-      - nvidia-cuda-nvcc-cu12==12.4.131
-      - nvidia-cuda-nvrtc-cu12==12.4.127
-      - nvidia-cuda-runtime-cu12==12.4.127
-      - nvidia-cudnn-cu12==8.9.7.29
-      - nvidia-cufft-cu12==11.2.1.3
-      - nvidia-cusolver-cu12==11.6.1.9
-      - nvidia-cusparse-cu12==12.3.1.170
-      - nvidia-nccl-cu12==2.21.5
-      - nvidia-nvjitlink-cu12==12.4.127
-      - overrides==7.7.0
-      - pandocfilters==1.5.1
-      - plotly==5.24.1
-      - prometheus-client==0.21.1
-      - pycparser==2.22
-      - pymol-remote==0.0.5
-      - pyrosetta==2024.38+release.200d5f9
-      - pyrosetta-help==0.5.9
-      - pyrosetta-installer==0.1.1
-      - pyrosettacolabsetup==1.0.9
-      - python-json-logger==3.2.1
-      - rdkit-to-params==1.2.8
-      - referencing==0.35.1
-      - rfc3339-validator==0.1.4
-      - rfc3986-validator==0.1.1
-      - rpds-py==0.20.0
-      - send2trash==1.8.3
-      - sniffio==1.3.1
-      - soupsieve==2.6
-      - tenacity==9.0.0
-      - terminado==0.18.1
-      - tinycss2==1.4.0
-      - toml==0.10.2
-      - tomli==2.2.1
-      - types-python-dateutil==2.9.0.20241206
-      - uri-template==1.3.0
-      - webcolors==24.11.1
-      - webencodings==0.5.1
-      - weblogo==3.7.12
-      - websocket-client==1.8.0
-      - widgetsnbextension==4.0.13
-      - xerox==0.4.1
-prefix: /endosome/work/CAND/shared/Chens/miniforge3/envs/upside2
+    - pyrosetta
+    - nglview
+    - plotly
