--- a/mpnn_config.yaml
+++ b/mpnn_config.yaml
@@ -46,7 +46,7 @@ mpnn_model_config:
 
   num_seq_per_target: 2000  # Number of sequences to generate per target
   batch_size: 8  # Batch size; reduce if running out of GPU memory
-  sampling_temp: ["0.3", "0.5", "0.7"] # Sampling temperature for amino acids (0.1-0.3 recommended)
+  sampling_temp: ["0.1", "0.2", "0.4", "0.6", "0.8","0.9","1.0"] # Sampling temperature for amino acids (0.1-0.3 recommended)
 
 
   #Not as important, can be changed
